--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
             border: 2px solid #555;
             background-color: #000;
             max-width: 100%;
-            /* Ensure it doesn't get too tall on mobile so controls are visible */
-            max-height: 80vh;
         }
 
         .controls {
@@ -240,6 +238,7 @@
             currentLeg = "RIGHT";
             toggleLegBtn.innerText = "Leg: Right";
         }
+        // Clear buffers so the skeleton doesn't jump across screen
         hipBuffer = [];
         kneeBuffer = [];
         ankleBuffer = [];
@@ -248,6 +247,7 @@
 
     // Angle Configuration
     setAngleBtn.addEventListener("click", () => {
+        // Toggle visibility of the input field
         if (angleControls.style.display === "none") {
             angleControls.style.display = "flex";
             inpTargetAngle.value = targetAngle;
@@ -262,6 +262,7 @@
         if (val && val > 10 && val < 180) {
             targetAngle = val;
             angleControls.style.display = "none";
+            // Update Title
             pageTitle.innerHTML = `Knee Flexion session: 10x 10sec ${targetAngle}&deg;`;
         } else {
             alert("Please enter a valid angle between 10 and 179.");
@@ -305,81 +306,52 @@
     async function predictWebcam() {
         if (!webcamRunning) return;
 
-        // Check if layout needs to change based on window size (Mobile Portrait vs Desktop)
-        // We do this check every frame or we could listen to resize events.
-        // Doing it here ensures the canvas is always the right shape.
-        const isPortrait = window.innerHeight > window.innerWidth;
-        const vidW = video.videoWidth;
-        const vidH = video.videoHeight;
-
-        let targetCanvasW, targetCanvasH;
-
-        if (isPortrait) {
-            // Stacked: Video Top, UI Bottom
-            targetCanvasW = vidW;
-            targetCanvasH = vidH * 2;
-        } else {
-            // Side-by-side: Video Left, UI Right
-            targetCanvasW = vidW * 2;
-            targetCanvasH = vidH;
+        if(canvasElement.width !== video.videoWidth * 2) {
+            canvasElement.width = video.videoWidth * 2;
+            canvasElement.height = video.videoHeight;
         }
 
-        if(canvasElement.width !== targetCanvasW || canvasElement.height !== targetCanvasH) {
-            canvasElement.width = targetCanvasW;
-            canvasElement.height = targetCanvasH;
-        }
-
+        const w = video.videoWidth;
+        const h = video.videoHeight;
         let startTimeMs = performance.now();
 
         if (lastVideoTime !== video.currentTime) {
             lastVideoTime = video.currentTime;
             poseLandmarker.detectForVideo(video, startTimeMs, (result) => {
-                processFrame(result, vidW, vidH, isPortrait);
+                processFrame(result, w, h);
             });
         }
 
         window.requestAnimationFrame(predictWebcam);
     }
 
-    function processFrame(result, w, h, isPortrait) {
+    function processFrame(result, w, h) {
         const currTime = Date.now() / 1000;
 
         // 1. Draw Background
         canvasCtx.save();
         canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
 
-        // -- DRAW VIDEO --
-        // In both layouts, video is at 0,0
+        // Mirror Video (Left side)
         canvasCtx.translate(w, 0);
         canvasCtx.scale(-1, 1);
         if(video.srcObject) canvasCtx.drawImage(video, 0, 0, w, h);
         canvasCtx.restore();
 
-        // -- DRAW UI BACKGROUND --
+        // UI Grey (Right side)
         canvasCtx.fillStyle = UI_BG_COLOR;
-        let uiStartX, uiStartY;
-
-        if (isPortrait) {
-            // UI goes below video
-            uiStartX = 0;
-            uiStartY = h;
-            canvasCtx.fillRect(0, h, w, h);
-        } else {
-            // UI goes to the right of video
-            uiStartX = w;
-            uiStartY = 0;
-            canvasCtx.fillRect(w, 0, w, h);
-        }
+        canvasCtx.fillRect(w, 0, w, h);
 
         let smoothAngle = 0;
 
         // 2. Logic & Skeleton
         if (result.landmarks && result.landmarks.length > 0) {
             const lm = result.landmarks[0];
+
+            // Get Current Leg Indices
             const idx = LEG_INDICES[currentLeg];
 
             // Calc coords (Flipping X for mirror effect)
-            // Video is always drawn at 0,0 so these coords are valid for the video region
             const rawHip = { x: (1 - lm[idx.hip].x) * w, y: lm[idx.hip].y * h };
             const rawKnee = { x: (1 - lm[idx.knee].x) * w, y: lm[idx.knee].y * h };
             const rawAnkle = { x: (1 - lm[idx.ankle].x) * w, y: lm[idx.ankle].y * h };
@@ -392,6 +364,7 @@
             const sKnee = getAveragePoint(kneeBuffer);
             const sAnkle = getAveragePoint(ankleBuffer);
 
+            // Only proceed if we have enough data to smooth
             if (sHip && sKnee && sAnkle) {
                 const currentAngle = calculateFlexion(sHip, sKnee, sAnkle);
 
@@ -399,7 +372,7 @@
                 if (angleBuffer.length > BUFFER_SIZE) angleBuffer.shift();
                 smoothAngle = Math.floor(angleBuffer.reduce((a, b) => a + b, 0) / angleBuffer.length);
 
-                // Draw Lines on the video part
+                // Draw Lines
                 canvasCtx.lineWidth = 3;
                 canvasCtx.strokeStyle = "white";
                 canvasCtx.beginPath();
@@ -415,7 +388,9 @@
 
                 // State Machine
                 if (state === "WAITING") {
-                    drawBigText(`${smoothAngle}°`, uiStartX, uiStartY, w, h);
+                    // Show large angle while waiting for rep to start
+                    drawBigText(`${smoothAngle}°`, w, h);
+
                     if (smoothAngle >= targetAngle) {
                         state = "HOLDING";
                         timerStart = currTime;
@@ -426,7 +401,7 @@
                     } else {
                         const elapsed = currTime - timerStart;
                         const remaining = Math.max(0, HOLD_DURATION - Math.floor(elapsed));
-                        drawBigText(`HOLD: ${remaining}s`, uiStartX, uiStartY, w, h);
+                        drawBigText(`HOLD: ${remaining}s`, w, h);
                         if (elapsed >= HOLD_DURATION) {
                             repsCompleted++;
                             if (repsCompleted >= MAX_REPS) {
@@ -440,33 +415,31 @@
                 } else if (state === "RESTING") {
                     const elapsed = currTime - timerStart;
                     const remaining = Math.max(0, REST_DURATION - Math.floor(elapsed));
-                    drawBigText(`REST: ${remaining}s`, uiStartX, uiStartY, w, h);
+                    drawBigText(`REST: ${remaining}s`, w, h);
                     if (elapsed >= REST_DURATION) state = "WAITING";
                 }
             }
         }
 
         // 3. UI Text
-        // Define padding for text
-        const textX = uiStartX + 40;
-        const textYStart = uiStartY + 60;
-        const lineHeight = 50;
-
+        const uiXOffset = w + 40;
         canvasCtx.fillStyle = TEXT_COLOR;
         canvasCtx.font = "bold 40px Arial";
-        canvasCtx.fillText(`STATUS: ${state}`, textX, textYStart);
+        canvasCtx.fillText(`STATUS: ${state}`, uiXOffset, 60);
 
         canvasCtx.font = "36px Arial";
-        canvasCtx.fillText(`LEG: ${currentLeg}`, textX, textYStart + lineHeight);
-        canvasCtx.fillText(`CURRENT FLEXION: ${smoothAngle} deg`, textX, textYStart + lineHeight*2);
-        canvasCtx.fillText(`TARGET ANGLE: ${targetAngle} deg`, textX, textYStart + lineHeight*3);
-        canvasCtx.fillText(`REPS: ${repsCompleted} / ${MAX_REPS}`, textX, textYStart + lineHeight*4);
+        canvasCtx.fillText(`LEG: ${currentLeg}`, uiXOffset, 100);
+        canvasCtx.fillText(`CURRENT FLEXION: ${smoothAngle} deg`, uiXOffset, 150);
+
+        // Replaced SESSION MAX with TARGET ANGLE
+        canvasCtx.fillText(`TARGET ANGLE: ${targetAngle} deg`, uiXOffset, 200);
+
+        canvasCtx.fillText(`REPS: ${repsCompleted} / ${MAX_REPS}`, uiXOffset, 250);
 
         if (state === "FINISHED") {
             canvasCtx.fillStyle = "#FFFFFF";
             canvasCtx.font = "bold 40px Arial";
-            // Centered in UI box
-            canvasCtx.fillText("SESSION COMPLETE", textX, uiStartY + h/2 + 40);
+            canvasCtx.fillText("SESSION COMPLETE", uiXOffset, h / 2 + 80);
             if (!sessionLogged) {
                 sessionLogged = true;
                 downloadBtn.style.display = "block";
@@ -474,21 +447,18 @@
         }
     }
 
-    function drawBigText(text, uiStartX, uiStartY, w, h) {
-        // Center the big text in the UI panel
-        const centerX = uiStartX + (w / 2);
-        const centerY = uiStartY + (h * 0.75); // Place it in the bottom/lower half of the UI panel
-
+    function drawBigText(text, w, h) {
+        const uiXOffset = w + 40;
+        const offset = Math.floor(h/2) + Math.floor(h/3);
         canvasCtx.fillStyle = TEXT_COLOR;
         canvasCtx.font = "bold 70px Arial";
-        canvasCtx.textAlign = "center";
-        canvasCtx.fillText(text, centerX, centerY);
-        canvasCtx.textAlign = "start"; // Reset alignment
+        canvasCtx.fillText(text, uiXOffset, offset);
     }
 
     // --- DOWNLOAD CSV ---
     downloadBtn.addEventListener('click', () => {
         const timestamp = new Date().toISOString().replace('T', ' ').substring(0, 19);
+        // Changed CSV header to store Target Angle instead of Max Flexion
         const csvContent = "data:text/csv;charset=utf-8,Timestamp,Leg,Target_Angle\n" + `${timestamp},${currentLeg},${targetAngle} deg`;
         const encodedUri = encodeURI(csvContent);
         const link = document.createElement("a");
